[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravn-sdk"
version = "0.1.1"
description = "Official Python SDK for Ravn — error monitoring and performance tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]
keywords = ["monitoring", "error-tracking", "observability", "logging", "apm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://getravn.com"
Documentation = "https://docs.getravn.com"
Repository = "https://github.com/Kosevskey/ravn-python"
"Bug Tracker" = "https://github.com/Kosevskey/ravn-python/issues"

[tool.setuptools.packages.find]
where = ["."]
